compress images & remove 3D tag

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -102,7 +102,7 @@
   email: malloy@feekagames.com
   discord: https://discordapp.com/users/98130908720173056
   twitter: https://twitter.com/feekacafe
-  image: /images/partners/malloy.png
+  image: /images/partners/malloy.jpg
   description: We Activate brands in the Metevarse and connect them to over 50,000 web3 and metaverse native users.
   location: United Kindom
   team_size: Small Studio
@@ -131,7 +131,6 @@
   tags:
     - Wearables
     - Architect
-    - 3D
     - Consulting
 - name: Last Slice
   partnerId: 7
@@ -140,7 +139,7 @@
   discord: https://discord.gg/ffrgkr3mN3
   twitter: https://twitter.com/lastsliceco
   email: info@lastslice.org
-  image: /images/partners/last-slice.png
+  image: /images/partners/last-slice.jpg
   description: The Last Slice Collective is a full cycle development studio comprised of over 200 talented multi-disciplinary artists dedicated to creating the most immersive and innovative experiences in Decentraland. From wearable creations to full custom scene creation and ideation, The Last Slice Collective has delivered over 40 different types of experiences in Decentraland in the last year including but not limited to, Samsung, Wall Street Bets, Snapple, Playboy, Animetas, Club Nyan Cat, Chibi Apes, Bright Moments (Venetian), DCL Halloween 2021, Deadheads, Apes3d, Canine Country Club, Rebel Bots, 420 Fest at Xetaplex, and more...
   instagram: https://www.instagram.com/lastsliceco/
   opensea: https://opensea.io/collection/last-slice-collective-nft
@@ -154,7 +153,6 @@
   tags:
     - Wearables
     - Architect
-    - 3D
     - Land
     - Events
     - Consulting
@@ -193,7 +191,7 @@
   youtube: https://www.youtube.com/channel/UCtOO4rd59HCPGkiAExKMimQ
   discord: https://discord.com/invite/SReuhkyBcq
   linkedin: https://www.linkedin.com/company/xrcouture
-  image: /images/partners/xrcouture.webp
+  image: /images/partners/xrcouture.png
   description: XR Couture is a leading digital fashion platform that enables brands to enter the metaverse and enables users to purchase and experience limited edition collectibles in the digital world. Bespoke solutions focusing on web3. We create digital assets and suggest marketing and collaboration partners to launch various metaverse assets including NFTs.
   location: India
   team_size: Medium Studio
@@ -253,7 +251,7 @@
   twitter: https://twitter.com/SugarClub_
   discord: http://discord.gg/46RKBu8
   instagram: https://www.instagram.com/sugarclub.eth/
-  image: /images/partners/sugar-club.png
+  image: /images/partners/sugar-club.jpg
   description: Digital designer. Virtual reality. Metaverse explorer.
   location: France
   team_size: Individual
@@ -307,7 +305,6 @@
   tags:
     - Wearables
     - Architect
-    - 3D
     - Events 
     - Land
     - Consulting
@@ -381,7 +378,7 @@
   linkedin: https://www.linkedin.com/company/filmrare/
   discord: https://discordapp.com/users/908745988133519371
   phone: +917477211984
-  image: /images/partners/filmrare.png
+  image: /images/partners/filmrare.jpg
   description: Filmrare is Decentraland´s longest-running cineplex and a venue with multiple screens and gallery floors backed by a DAO grant.
   location: India
   languages: 
@@ -518,7 +515,7 @@
   instagram: https://www.instagram.com/bioma_nft/
   linkedin: https://www.linkedin.com/in/carolinamunozawad/
   phone: +16462033991
-  image: /images/partners/bioma.png
+  image: /images/partners/bioma.jpg
   description: "Bioma is a project to threedeemodel the metaverse. Based on the idea of a biome: 'a large naturally occurring community occupying a major habitat', we offer a design experience that revolves around the performativity of the body, virtual materiality, and how these two interact."
   team_size: Individual
   location: United States
@@ -541,7 +538,7 @@
   linkedin: https://www.linkedin.com/in/idr-kenny-yap-b8613536/
   email: kenny.fws@gmail.com
   parcel.so: https://parcel.so/creatorverse/creator/fireworks-design-studio
-  image: /images/partners/fireworksdesignstudio.png
+  image: /images/partners/fireworksdesignstudio.jpg
   description: The exploration of ideas from all directions without boundaries and restrictions. Such are the design principles of Fireworks Design Studio, a KL-based interior design firm established in 2008 by Kenny Yap, a professionally trained interior design veteran with more than 20 years of experience in the industry. Built upon the philosophy that every project should be approached with a fresh perspective, Fireworks Design Studio recognizes that each different space possesses a unique identity and thus deserves its very own design language to convey its characteristics to the fullest potential. Ultimately, every idea and inspiration stems from the client’s story and is interwoven into the environment through a modern and functional design approach. Fireworks Design Studio has strong expertise in residential and commercial projects and provides end-to-end interior design services that include consultancy and interior fit-out. The design firm's principle of transcending the norms of interior design is applied in a wide range of works, from private residences and high-rise developments to corporate offices and tailor-made retail spaces and now the Metaverse
   team_size: Medium Studio
   location: Malaysia
@@ -721,7 +718,7 @@
   website: https://42meta.com
   email: martin@42meta.com
   linkedin: https://www.linkedin.com/in/martinfrericks
-  image: /images/partners/42meta.png
+  image: /images/partners/42meta.jpg
   description: "With 42Meta you take the next step in communication and prepare for the future today. We help you with your first steps in the virtual worlds. 42Meta is an early-stage AdTech company that is actively involved in the design of the Metaverse and offers communication options in the Metaverse. Take an active part in building the future and don't wait until all positions have been filled. The Metaverse will be a gigantic upheaval and will not only turn the business world completely upside down."
   location: Germany
   languages:
@@ -758,7 +755,6 @@
     - Crypto
   tags:
     - Events
-    - 3D
     - Consulting
 - name: Dragocapital
   partnerId: 39
@@ -846,7 +842,6 @@
     - Wire Transfer
   tags:
     - Events
-    - 3D
     - Architect
     - Wearables
     - Consulting
@@ -858,7 +853,7 @@
   linkedin: https://www.linkedin.com/in/jibrail-idris/
   youtube: https://www.youtube.com/channel/UCz-g69qhfHOV2Zuy7xgLiIw
   phone: +6582661085
-  image: /images/partners/bandwagon.svg.png
+  image: /images/partners/bandwagon.jpg
   description: End to end Decentraland web3 marketing, NFTs, wearable and gamification solutions.
   location: Singapore
   languages:
@@ -872,7 +867,6 @@
     - Events
     - Architect
     - Consulting
-    - 3D
     - Land
 - name: Oktopluz
   partnerId: 44
@@ -928,7 +922,6 @@
   tags:
     - Wearables
     - Architect
-    - 3D
     - Events
     - Consulting
     - Land
@@ -939,7 +932,7 @@
   email: sespromusic@gmail.com
   discord: https://discordapp.com/users/808599870746394666
   twitter: https://twitter.com/@stoney_eye
-  image: /images/partners/stoneyeye.png
+  image: /images/partners/stoneyeye.jpg
   description: Stoney Eye Studios is here for your Live DJ needs. As well as artwork, such as full NFT projects or even just a flier design. We also do music production, wearables, and land rentals.
   location: United States
   languages:
@@ -1067,7 +1060,7 @@
   twitter: https://twitter.com/DCLMETATIGER
   discord: https://discord.gg/4JaBvvcEEX
   youtube: https://www.youtube.com/channel/UCuvPIU18xRGlo7XfNYaoYBQ
-  image: /images/partners/metatiger.JPG
+  image: /images/partners/metatiger.jpg
   description: Indie Gamedev, Coder, 3D Artist, Wearable Creator, NFT Coin Art Designer, Decentraland Native / Homie.
   location: Germany
   languages:
