rename partners url for SEO

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -82,7 +82,7 @@
     - title: Creating content
       page: "content-intro.html"
     - title: Verified Partners
-      page: "talent-hub.html"
+      page: "metaverse-agencies.html"
     - title: Design experiences
       children:
         - post: "design-experience/2018-06-26-mvp-guidelines.md"
