--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -2244,7 +2244,7 @@
   default_link: https://www.metagellan.com/en
   website: https://www.metagellan.com/en
   email: loic@colleconline.com
-  linkedin: https://www.linkedin.com/in/loïc-schappacher-5a8abb29
+  linkedin: https://www.linkedin.com/in/lo%C3%AFc-schappacher-5a8abb29/
   twitter: https://twitter.com/colleconline
   instagram: https://www.instagram.com/colleconline_officiel/
   youtube: https://www.youtube.com/c/Colleconline-Collectors-Website
